Fix floating nav text-jump

--- a/static/styles/index.less
+++ b/static/styles/index.less
@@ -1,5 +1,6 @@
 @blue: #5096E4;
 @black: #555;
+@grey: #777;
 @white: #FFF;
 
 html, body {
@@ -31,12 +32,13 @@ header {
 		font-size: 36;
 		font-weight: 100;
 		margin: 0;
-		padding: 0;
+		padding: 0 0 50px 0;
 	}
 
 	nav {
 		background: @blue;
-		margin: 50px 0 0 0;
+		position: absolute;
+		width: 100%;
 		padding: 5px;
 	}
 
@@ -70,4 +72,29 @@ header {
 			}
 		}
 	}
+}
+
+section {
+	width: 960px;
+	margin: 0 auto;
+	margin-top: 50px;
+
+	h1 {
+		color: @black;
+		font-family: 'museo-slab', serif;
+		font-weight: 900;
+	}
+
+	p {
+		color: @grey;
+		font-family: 'museo-sans', sans-serif;
+		font-weight: 100;
+		margin: 10px 0;
+		padding: 0;
+	}
+}
+
+.left {
+	float: left;
+	width: 400px;
 }
